# genai-fastapi-templ

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: llm_settings.py  settings.py
app/core/: logger.py
app/core/schemas/: response.py
app/database/: db.py
app/llm/: llm_factory.py
app/middlewares/: error_handler.py
app/modules/chat/: router.py  schema.py  service.py
app/modules/health/: router.py
migrations/: env.py
migrations/versions/: a5815a2c5f03_initial_migration.py
src/: main.py
src/config/: settings.py
src/database/: db.py
src/database/models/: __init__.py  base.py
src/llm/: llm_factory.py
src/middlewares/: error_handler.py
src/modules/chat/: router.py  schema.py  service.py
src/modules/health/: router.py
